--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@apollo/client": "^3.6.2",
     "@headlessui/react": "^1.4.2",
-    "@heroicons/react": "^1.0.5",
+    "@heroicons/react": "^1.0.6",
     "@rainbow-me/rainbowkit": "^0.2.2",
     "ethers": "^5.6.6",
     "graphql": "^16.5.0",
     "next": "12.0.7",
+    "next-themes": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "wagmi": "^0.4.5",
